<resources>
    <string name="app_name">Horizon</string>
    <string name="title_home">Home</string>
    <string name="security_list">Lista de Títulos</string>
    <string name="title_notifications">Carteira</string>
    <string name="title_expiry_date">Vencimento</string>
    <string name="title_net_income">Rend. Líq. (a.a)</string>
    <string name="publisher">Corretora</string>
    <string name="rescue">Resgate</string>
    <string name="ir">I.R.</string>
    <string name="ir_regressive">Regressivo</string>
    <string name="minimum_investment">Inv. Mínimo</string>
    <string name="security_details">Detalhes do Título</string>
    <string name="emitter">Emissor</string>
    <string name="interest_yearly">Rendimento (a.a)</string>
    <string name="liquidity">Liquidez</string>
    <string name="gross">Bruto</string>
    <string name="liquid">Líquido</string>
    <string name="tax_on_income">I.R. sobre retorno</string>
    <string name="expiry_date">Vencimento</string>
    <string name="income_type">Tipo de Rendimento</string>
    <string name="fgc">FGC</string>
    <string name="guaranteed">Garantido</string>
    <string name="simulate">Simule</string>
    <string name="insert_inv_amount">Insira o valor investido</string>
    <string name="visit">Visitar</string>
    <string name="interest_type">Tipo de Juros</string>
    <string name="simulate_value">Insira o valor investido</string>
    <string name="currency_symbol">R$</string>
    <string name="tax">Imposto</string>
    <string name="graphGrossIncome">Rend. Bruto</string>
    <string name="graphLiquidIncome">Rend. Líq.</string>
    <string name="graphLiquidAmount">Montante Líq.</string>
    <string name="insertCorrectAmountValue">Valor inserido menor do que investimento mínimo!</string>
    <string name="insertAValueGreaterOrEqualTo">Insira um valor maior ou igual à</string>
    <string name="liquid_income">Líquido</string>
    <string name="gross_income">Bruto</string>
    <string name="income_annually">Retorno (a.a)</string>
    <string name="not_guaranteed">Não garantido</string>
    <string name="on_expiry">No vencimento</string>
    <string name="daily">Diário</string>
    <string name="semiannual">Semestral</string>
    <string name="no_fee">Isento</string>
    <string name="day_plus_one">D+1</string>
    <string name="on_expiry_abbreviated">No vencim.</string>
    <string name="apply">Aplicar</string>
    <string name="cancel">Cancelar</string>
    <string name="filters">Filtros</string>
    <string name="until">"Até: "</string>
    <string name="fetch_error">Não foi possível carregar o título</string>
    <string name="no_filter_match">Títulos não encontrados</string>
    <string name="selic">SELIC</string>
    <string name="cdi">CDI</string>
    <string name="ipca">IPCA</string>
    <string name="igpm">IGP-M</string>
    <string name="indexes_twelve">Índices de juros (12 meses)</string>
    <string name="greatest_interests">Maiores rendimentos</string>
    <string name="most_favorites">Mais favoritados</string>
    <string name="titles">Títulos</string>
    <string name="public_titles">Tesouro Direto</string>
    <string name="cdb">CDB</string>
    <string name="lci_lca">LCI/LCA</string>
    <string name="cri_cra">CRI/CRA</string>
    <string name="debentures">Debêntures</string>
    <string name="my_profile">Meu Perfil</string>
    <string name="no_item_found">Nenhum título encontrado :(</string>
    <string name="forgot_password">Esqueci a senha</string>
    <string name="has_no_account">Não tem uma conta?</string>
    <string name="signup">Cadastre-se</string>
    <string name="logon">Entrar</string>
    <string name="password_register">Senha (+ 6 caracteres)</string>
    <string name="password">Senha</string>
    <string name="email">E-mail</string>
    <string name="investment_guide">Horizon - Guia de Renda Fixa</string>
    <string name="verify_inbox">Verifique sua caixa de e-mails</string>
    <string name="wrong_email_or_pass">E-mail e/ou senha inválido</string>
    <string name="password_tips">Sua senha deve conter mais de 6 caracteres, ao menos 1 letra maíuscula e 1 número</string>
    <string name="client_id">27768207438-rkv9nc1h52bh2t9bu32t5k8g711cgv4q.apps.googleusercontent.com</string>
    <string name="google_signin_error">Não foi possível autenticar com o Google</string>
    <string name="invalid_credentials">Credenciais inválidas</string>
    <string name="insert_email_error">Informe seu e-mail</string>
    <string name="insert_pass_error">Insira sua senha</string>
    <string name="lets_find_your_account">Vamos localizar a sua conta</string>
    <string name="insert_your_email_addreess">Insira o seu endereço de e-mail</string>
    <string name="insert_email">Insira seu e-mail</string>
    <string name="find">Localizar</string>
    <string name="we_sent_a_recovery_link">Enviamos um link de recuperação para o seu e-mail</string>
    <string name="we_sent_a_recovery_link_message">Enviamos um link de recuperação de senha para seu e-mail. Se não encontrar o e-mail na caixa de entrada, verifique a caixa de spam ou lixo eletrônico.</string>
    <string name="havent_you_received_the_link">Não recebeu o e-mail ?</string>
    <string name="send_again">Enviar novamente</string>
    <string name="go_back_to_login">Voltar para login</string>
    <string name="register_in_horizon">Crie uma conta no Horizon</string>
    <string name="first_name">Nome</string>
    <string name="last_name">Sobrenome</string>
    <string name="register">Cadastre-se</string>
    <string name="or">Ou</string>
    <string name="we_sent_an_activation_link">Enviamos um link de ativação para seu e-mail</string>
    <string name="we_sent_an_activation_link_message">Enviamos um link de ativação de conta para o seu e-mail. É necessário ativar a sua conta para logar no aplicativo. Se não encontrar o e-mail na caixa de entrada, verifique a caixa de spam ou lixo eletrônico.</string>
    <string name="invalid_email">E-mail inválido!</string>
    <string name="recovery_email_resent">"O link de recuperação foi reenviado para: "</string>
    <string name="email_cant_be_null">E-mail não pode estar vazio!</string>
    <string name="insert_your_name">Insira seu nome</string>
    <string name="insert_your_last_name">Insira seu sobrenome</string>
    <string name="insert_a_valid_email">Insira um endereço de e-mail válido</string>
    <string name="invalid_password">Senha deve conter mais de 6 caracteres, ao menos uma letra maíscula e um número</string>
    <string name="password_confirm">Confirme sua senha</string>
    <string name="not_equal_to_password">Senhas não coicidem</string>
    <string name="could_not_complete_registration">Não foi possível completar o cadastro</string>
    <string name="link_resent">"Link reenviado para: "</string>
    <string name="my_favorites">Meus títulos favoritos</string>
    <string name="name">Nome</string>
    <string name="could_not_fetch_profile">Não foi possível carregar o perfil</string>
    <string name="all_titles">Todos os títulos</string>
    <string name="loading_indexes">Carregando índices…</string>
    <string name="days">dias</string>
    <string name="loading_values">Carregando valores…</string>
    <string name="loading_securities">Carregando títulos…</string>
    <string name="order_by">Ordenar por</string>
    <string name="direct_treasure">Tesouro Direto</string>
    <string name="income_tax">Imposto de Renda</string>
    <string name="order_by_key">ORDER_BY</string>
    <string name="title_type_key">TITLE_TYPE_KEY</string>
    <string name="preferences">Preferências</string>
    <string name="exit">Sair</string>
    <string name="would_you_like_to_sign_out">Tem certeza que deseja fazer o logoff ?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="welcome">Bem vindo(a), %1$s!</string>
    <string name="about_the_app_text">O Horizon é um aplicativo de busca de títulos de Renda Fixa
        criado como projeto acadêmico de Iniciação Científica na Fatec Indaiatuba pelo aluno do curso de Análise e Desenvolvimento de Sistemas, Bruno Gino, orientado pelo professor Michel Moron Munhoz.\n\n
        O app foi criado com o objetivo de ser um buscador rápido, objetivo e simples de diversos títulos de renda fixa disponíveis no mercado brasileiro.\n
        \n Este projeto também visa dar continuidade nos projetos anteriores de Iniciação Científicas também orientados pelo professor, todos com foco no mercado financeiro.
    </string>
    <string name="faq_home"><u>F.A.Q</u></string>
    <string name="faq_title">F.A.Q</string>
    <string name="tax_indexes">Índices de juros</string>
    <string name="about_home"><u>Sobre o app</u></string>
    <string name="about_title">Sobre o app</string>
    <string name="select_a_type_of_security">Selecione um tipo de título</string>
    <string name="see_tax_indexes">Ver índices de juros</string>
    <string name="about_the_app">Sobre o app</string>
    <string name="observation">Obs.: O aplicativo está atualmente em sua fase de teste ! Clique não botão abaixo para deixar o seu feedback caso ainda não tenha feito</string>
    <string name="rate_me">Avalie o app ! :)</string>
    <string name="question_one">P: O aplicativo tem alguma função ou relação com a compra dos títulos ?</string>
    <string name="answer_one">R: Não, o Horizon é um aplicativo de busca. A sua função é somente de ser um guia, para posterior redirecionamento para o site da corretora e eventual compra.</string>
    <string name="question_two">P: Por que o valor de simulação na tela de detalhes do título já está preenchido quando abro a tela ?</string>
    <string name="answer_two">R: Todos os títulos tem um valor mínimo para aplicação, no caso este valor está na caixa de texto por padrão mas você pode alterá-lo para fazer suas simulações de investimento normalmente.</string>
    <string name="question_three">P: As linhas do gráfico de índices parecem piscar quando abro a tela do gráfico, isso é normal ?</string>
    <string name="answer_three">R: Os dados do gráfico são fornecidos por um serviço externo e são carregados em tempo real. Na medida em que o dados são obtidos, todo o conjunto de dados do gráfico é atualizado e o componente também, decorrendo na animação.</string>
    <string name="question_four">P: Quando abro a tela do gráfico os dados não carregam, o que fazer ?</string>
    <string name="indexes_refresh">Atualizar dados</string>
    <string name="answer_four">R: Você pode tentar atualizar o gráfico por meio do menu no canto superior direito. Caso não resolva, tente sair e voltar para tela para executar a atualização.</string>
    <string name="question_five">P: É possível usar o aplicativo sem internet ?</string>
    <string name="answer_five">R: É possível somente carregar a lista de títulos, caso tenha sido acessada anteriormente. Infelizmente, não é possível acessar o gráfico, pois os dados são carregados em tempo real e não são salvos temporariamente.</string>
    <string name="google_forms_url">https://forms.gle/zrYm31MBsLk9k4dw8</string>
    <string name="would_you_like_to_be_redirected">Gostaria de ser redirecionado para o formulário no Google Forms ?</string>
    <string-array name="order_by_options">
        <item>Maior rentabilidade em menor prazo</item>
        <item>Maior juros</item>
        <item>Menor juros</item>
        <item>Maior prazo</item>
        <item>Menor prazo</item>
        <item>Menor investimento mínimo</item>
    </string-array>
</resources>
